Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-124085

Incorrect icon used for "document-properties" on Windows

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P3: Somewhat important
    • 6.7.1, 6.8.0 FF
    • 6.7.0
    • QPA: Windows
    • None
    • Windows 11
    • Windows
    • 5a775fc5f (dev), ba37ed8e8 (6.7)

    Description

      Since Qt 6.7, QIcon::fromTheme() will map some of the XDG icon names to their corresponding native icon on Windows. The icon mapped to "document-properties" is a gear icon, the icon actually used by Windows for the "document property" purpose is a wrench icon.

      The screenshot is the icon used by Windows 11, the highlighted one is the file properties menu:

      Related link:

      https://learn.microsoft.com/en-us/windows/apps/design/style/segoe-fluent-icons-font

      Attachments

        For Gerrit Dashboard: QTBUG-124085
        # Subject Branch Project Status CR V

        Activity

          People

            owolff Oliver Wolff
            blumia Gary Wang
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes