WindowsIconEngine: Use the correct icon for document-properties

Currently the icon used by document-properties is a gear icon, on
Windows, the actual icon used by explorer's context menu for the
properties menu option is the wrench icon. This patch change the icon to
the wrench icon.

Fixes: QTBUG-124085
Change-Id: Ife49ad64d23b73b7676bc39330887e2cb320dcf9
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit 5a775fc5f73ec3a39d17c261e4ea7e715eff44d1)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>